Show whitespace in failure diffs; other minor failures fix

--- a/web/client/resources/css/common.css
+++ b/web/client/resources/css/common.css
@@ -422,6 +422,12 @@ footer .server-down {
 	font-size: 14px;
 }
 
+.diffviewer .original,
+.diffviewer .changed,
+.diffviewer .diff {
+	white-space: pre-wrap;
+}
+
 .diffviewer tr:first-child td {
 	border-top-width: 1px;
 	border-top-style: solid;
